<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/navigation_menu"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/menu_dashboard" />

        <item
            android:id="@+id/nav_levels"
            android:title="@string/menu_levels" />

        <item
            android:id="@+id/nav_radicals"
            android:title="@string/menu_radicals" />

        <item
            android:id="@+id/nav_kanji"
            android:title="@string/menu_kanji" />

        <item
            android:id="@+id/nav_vocabulary"
            android:title="@string/menu_vocabulary" />

    </group>

    <item android:title="@string/account_menu">
        <menu>
            <group android:id="@+id/account_menu">

                <item
                    android:id="@+id/menu_profile"
                    android:title="@string/menu_profile" />

                <item
                    android:id="@+id/menu_settings"
                    android:title="@string/menu_levels" />

                <item
                    android:id="@+id/menu_logout"
                    android:title="@string/menu_logout" />

            </group>
        </menu>
    </item>
</menu>