<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    tools:context="com.jteran.crappykani.app.activity.MainActivity">

    <FrameLayout
        android:id="@+id/login_header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="645dp"
            android:layout_height="190dp"
            android:layout_gravity="top|center_horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:maxWidth="645dp"
                android:src="@drawable/login_background"
                android:scaleType="centerCrop"
                android:contentDescription="@string/desc_login_background_banner"
                app:layout_constraintTop_toTopOf="parent"/>
        </LinearLayout>


        <TextView
            style="@style/LoginAlert.Info"
            android:id="@+id/login_alert"
            android:maxWidth="300dp"
            android:singleLine="false"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"/>

    </FrameLayout>

    <ViewSwitcher
        android:id="@+id/loading_switcher"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inAnimation="@android:anim/fade_in"
        android:outAnimation="@android:anim/fade_out"
        app:layout_constraintTop_toBottomOf="@id/login_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="300dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/user_login"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_text_input"
                android:padding="10dp"
                android:hint="@string/user_login"
                android:autofillHints="@string/autofill_hint_username"
                android:inputType="text"/>

            <EditText
                android:id="@+id/user_password"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_text_input"
                android:padding="10dp"
                android:hint="@string/user_password"
                android:autofillHints="@string/autofill_hint_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/login_label"
                android:background="@drawable/login_button" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </ViewSwitcher>


</android.support.constraint.ConstraintLayout>
